--- a/css/app.css
+++ b/css/app.css
@@ -1,17 +1,26 @@
 .jumbotron{
-				width: 900px;
+				width: 800px;
 				text-align:center;
 				margin-top:20px;
 				margin-left:auto;
 				margin-right:auto;
 			}
-			.table{
-				margin-top:20px;
-			}
-			.form-control{
-				margin-bottom:5px;
-			}
-			.selecionado{
-				background-color: yellow;
-			}
-			}
+			h3 {
+ 	margin-bottom: 30px;
+ }
+ .table {
+ 	margin-top: 20px;
+ }
+ .form-control {
+ 	margin-bottom: 5px;
+ }
+ .selecionado {
+ 	background-color: yellow;
+ }
+ .negrito {
+ 	font-weight: bold;
+ }
+ hr {
+ 	border-color: #999;
+ } 
+			
