--- a/view/contatos.html
+++ b/view/contatos.html
@@ -2,8 +2,8 @@
 			<h3>{{app}}</h3>
 
 			
-			<ui-alert ng-show="error" title="Ops, aconteceu um problema!">
-				{{error}}
+			<ui-alert ng-show="!contatos" title="Ops, aconteceu um problema!">
+				
 			</ui-alert>
 
 			<ui-accordions>	
