--- a/view/contatos.html
+++ b/view/contatos.html
@@ -1,10 +1,10 @@
 <div class="jumbotron">
-			<h3>{{app}}</h3>
+			<h3>{{app}}</h3> 
 
 			
 			<ui-alert ng-show="!contatos" title="Ops, aconteceu um problema!">
-				
-			</ui-alert>
+				Sem contatos carregados!
+			</ui-alert> 
 
 			<ui-accordions>	
 				<ui-accordion title="Accordion 1">
