--- a/view/detalhesContato.html
+++ b/view/detalhesContato.html
@@ -1,1 +1,10 @@
-{{contato}}
+<div class="detalhes">
+    <label>Id:</label>
+    {{contato.id}} </br >
+    <label>Nome:</label>
+    {{contato.nome}} 
+    <label>Telefone:</label>
+    {{contato.telefone}}
+    <label>Operadora:</label>
+    {{contato.operadora.nome}}
+</div> 
