--- a/view/contatos.html
+++ b/view/contatos.html
@@ -15,7 +15,8 @@
 				</ui-accordion>
 			</ui-accordions>		
 			
-			<input  class="form-control" type="text" ng-model="criterioDeBusca" placeholder="O que você está buscando?"/>
+			<input  class="form-control" type="text" ng-model="criterioDeBusca" ng-model-options="{
+				updateOn: 'default blur',debounce:{default:500,blur:0}}" placeholder="O que você está buscando?"/>
 			<table ng-show="contatos.length > 0" class="table">
 				<tr>
 					<th></th>
@@ -23,19 +24,21 @@
 					<th><a href="" ng-click="ordenarPor('nome')">Nome</a></th>
 					<th><a href="" ng-click="ordenarPor('telefone')">Telefone</a></th>
 					<th>Operadora</th>
+					<th>Preço</th>
 					<th>Data</th>
 				</tr>	
 				<tr ng-class="{selecionado:contato.selecionado}" ng-repeat="contato in contatos | filter:criterioDeBusca | orderBy:criterioDeOrdenacao:direcaoDaOrdenacao">
-					<td><input type="checkbox" ng-model="contato.selecionado"/></td>
-					<td>{{contato.serial}}</td>
-					<td><a href="#/detalhesContato/{{contato.id}}">{{contato.nome | name | elipsis:10}}</a></td>
-					<td>{{contato.telefone}}</td>
-					<td>{{contato.operadora.nome | lowercase}}</td>
-					<td>{{contato.data | date:'EEEE dd/MM/yyyy HH:mm'}}</td>
+					<td><input type="checkbox" ng-model="contato.selecionado" ng-click="verificarContatoSelecionado(contatos)"/></td>
+					<td>{{::contato.serial}}</td>
+					<td><a href="#/detalhesContato/{{contato.id}}">{{::contato.nome | name | elipsis:10}}</a></td>
+					<td>{{::contato.telefone}}</td>
+					<td>{{::contato.operadora.nome | lowercase}}</td>
+					<td>{{::contato.operadora.precoComImposto | currency}}</td>
+					<td>{{::contato.data | date:'EEEE dd/MM/yyyy HH:mm'}}</td>
 					<td><div style="width: 20px; height: 20px;" ng-style="{'background-color':contato.cor}"></div></td>
 				</tr>	
 			</table>
 			<hr/>
 			<a class="btn btn-primary btn-block" href="#/novoContato">Novo Contato</a>
-			<button class="btn btn-danger btn-block" ng-click="apagarContatos(contatos)" ng-if="isContatoSelecionado(contatos)">Apagar Contatos</button>
+			<button class="btn btn-danger btn-block" ng-click="apagarContatos(contatos)" ng-if="hasContatoSelecionado">Apagar Contatos</button>
 		</div>
