--- a/view/contatos.html
+++ b/view/contatos.html
@@ -27,7 +27,8 @@
 					<th>Preço</th>
 					<th>Data</th>
 				</tr>	
-				<tr ng-class="{selecionado:contato.selecionado}" ng-repeat="contato in contatos | filter:criterioDeBusca | orderBy:criterioDeOrdenacao:direcaoDaOrdenacao">
+				<tr ng-class="{selecionado:contato.selecionado}" ng-repeat="contato in contatos | filter:criterioDeBusca | orderBy:criterioDeOrdenacao:direcaoDaOrdenacao
+				track by contato.id">
 					<td><input type="checkbox" ng-model="contato.selecionado" ng-click="verificarContatoSelecionado(contatos)"/></td>
 					<td>{{::contato.serial}}</td>
 					<td><a href="#/detalhesContato/{{contato.id}}">{{::contato.nome | name | elipsis:10}}</a></td>
