--- a/view/contatos.html
+++ b/view/contatos.html
@@ -1,3 +1,7 @@
+<button class="btn btn-primary" ng-click="showImage=!showImage">Show/Hide Image</button>
+<div ng-if="showImage">
+	<img ng-src="img/rebels.gif"/>
+</div>
 <div class="jumbotron">
 			<h3>{{app}}</h3> 
 	
